--- a/css/style.css
+++ b/css/style.css
@@ -21,14 +21,15 @@ body {
 }
 html {
   box-sizing: border-box;
-  }
-  *,
-  *::before,
-  *::after {
+}
+*,
+*::before,
+*::after {
   box-sizing: inherit;
-  }
+}
 .page-header {
   padding: 25px 0;
+  border: 1px solid #ececec;
 }
 .list {
   list-style: none;
@@ -46,7 +47,6 @@ html {
   width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
- 
 }
 
 .flexbox {
@@ -60,7 +60,7 @@ html {
 }
 .menu-list {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   text-align: center;
 }
@@ -103,15 +103,15 @@ html {
 .contacts-link:not(:last-child) {
   margin-right: 30px;
 }
-
-.link-grey {
+.contacts-link .link {
+  display: inline-flex;
+  align-items: center;
   color: var(--primary-text-color);
 }
-.link-bigger {
-  line-height: 24px;
-  /* or 171% */
-  letter-spacing: 0.03em;
-  font-weight: normal;
+.contacts-icon {
+  vertical-align: middle;
+  margin-right: 10px;
+  fill: currentColor;
 }
 
 .link-work {
@@ -122,7 +122,22 @@ html {
 }
 .hero {
   text-align: center;
-  background-color: rgba(128, 128, 128, 0.45);
+}
+
+.hero .container {
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../img/hero.jpg);
+  background-repeat: no-repeat;
+  background-color: #000000;
+  background-size: cover;
+  background-position: center;
+  margin-left: auto;
+  margin-right: auto;
+  height: 600px;
+  width: 1600px;
 }
 .hero-title {
   font-weight: 900;
@@ -132,6 +147,7 @@ html {
   text-transform: uppercase;
   color: var(--primary-white-color);
   margin: 0 0 30px;
+  padding-top: 200px;
 }
 
 .btn-primary {
@@ -223,7 +239,7 @@ html {
 }
 .text-grey {
   color: var(--primary-text-color);
- line-height: 1.9;
+  line-height: 1.9;
 }
 .text-white {
   color: var(--primary-white-color);
@@ -234,7 +250,6 @@ html {
 
 .box-list-team {
   width: 270px;
-  height: 422px;
   left: 215px;
   top: 1785px;
   background: #ffffff;
@@ -244,10 +259,67 @@ html {
   border-radius: 0px 0px 4px 4px;
 }
 .social {
-  padding: 16px 0 24px 0;
+  margin: 16px 0 30px 0;
+}
+.social-icon {
+  fill: currentColor;
+}
+.social-icons-list:not(:last-child) {
+  margin-right: 10px;
+}
+.social-icons-link {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  padding: 0;
+  margin: 0;
+  color: #afb1b8;
+  border-radius: 50%;
+}
+.social-icons-link:hover,
+.social-icons-link:focus {
+  background-color: var(--accent-color);
+}
+.social-icons-link:hover .social-icon {
+  fill: var(--primary-white-color);
+}
+.social-icons-footer {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  padding: 0;
+  margin: 0;
+  color: var(--primary-white-color);
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 50%;
+}
+.social-icons-footer:hover,
+.social-icons-footer:focus {
+  background-color: var(--accent-color);
+}
+.clients-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 170px;
+  height: 90px;
+  border: 1px solid #afb1b8;
+  box-sizing: border-box;
+  border-radius: 4px;
+}
+.clients-list:hover,
+.clients-list:focus {
+  border: 1px solid var(--accent-color);
 }
 .clients-list:not(:last-child) {
   margin-right: 30px;
+}
+.client-icon {
+  fill: #afb1b8;
 }
 .footer {
   display: flex;
@@ -255,15 +327,24 @@ html {
   align-items: center;
   padding-top: 60px;
   padding-bottom: 60px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 1600px;
 }
 .footer > .container {
   display: flex;
   justify-content: space-between;
 }
-.footer-address > .logo{
+.footer-address > .logo {
   display: block;
 }
-
+.footer .link {
+  color: var(--primary-text-color);
+  line-height: 24px;
+  /* or 171% */
+  letter-spacing: 0.03em;
+  font-weight: normal;
+}
 .contact-us-item {
   display: flex;
   justify-content: space-between;
@@ -275,16 +356,23 @@ html {
   text-transform: uppercase;
   color: var(--primary-white-color);
   margin-bottom: 20px;
- 
 }
-
 .feature-item {
-  display: block;
-  background-color: var(--second-background-color);
-  padding: 25px 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 270px;
+  height: 120px;
+  background-color: #f5f4fa;
   border-radius: 4px;
   margin-bottom: 30px;
 }
+
+/* .feature-icon {
+  display: block;
+  background-color: var(--second-background-color);
+  padding: 25px 100px;
+} */
 
 .portfolio {
   padding: 94px calc((100% - 1200px) / 2);
@@ -292,7 +380,7 @@ html {
 .portfolio-menu li:not(:last-child) {
   margin-right: 8px;
 }
-.portfolio-menu{
+.portfolio-menu {
   justify-content: center;
   margin-bottom: 30px;
 }
