--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,7 @@ html {
     ),
     url(../img/hero.jpg);
   background-repeat: no-repeat;
-  background-color: #000000;
+  background-color: #c4c4c4;
   background-size: cover;
   background-position: center;
   margin-left: auto;
